examples/bad/datatype.arvo
data foo (A : Type) : A a -> Type := .

data bar (A : Type) (B : A a) : Type := .
